[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "glm-utils"
module = "glm_utils"
author = "Jan Clemens, Adrian Palacios, Deniz Yuezak"
author-email = "clemensjan@googlemail.com, adpala93@gmail.com, denizyuzak@gmail.com"
home-page = "https://github.com/janclemenslab/glm_utils"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
requires = ['numpy', 'scipy', 'scikit-learn']
description-file = "README.md"


